# ergo

./: .gitignore  AGENTS.md  LICENSE  flake.nix  index.html  package.json  patch_backend.sh  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  temp.rs
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/crates/ergo-core/: Cargo.toml
src-tauri/crates/ergo-core/src/: ast.rs  bundled_templates.rs  compilation_types.rs  compile_artifacts.rs  core_errors.rs  document_generation_lib.rs  document_outline.rs  document_resources.rs  document_session.rs  document_session_events.rs  document_session_generation.rs  document_session_generation_tests.rs  document_session_tests.rs  document_session_types.rs  document_source_builder.rs  font_availability.rs  font_loader.rs  font_requirements.rs  generated_assets.rs  lib.rs  package_resolver.rs  path_utils.rs  preview_pipeline.rs  preview_sync.rs  preview_sync_lookup.rs  preview_sync_tests.rs  preview_sync_types.rs  quote_policy.rs  required_input_fallback.rs  resource_watch.rs  template_spec.rs  test_fixtures.rs  vfs.rs  world.rs
src-tauri/crates/ergo-core/src/typst_source/: custom_fields.rs  figures.rs  fragments.rs  hashing.rs  mod.rs  paths.rs  (+6 more)
src-tauri/crates/ergo-core/tests/: package_resolver.rs
src-tauri/crates/ergo-engine-wasm/: Cargo.toml
src-tauri/crates/ergo-engine-wasm/src/: engine.rs  lib.rs  profile.rs
src-tauri/crates/ergo-engine-wasm/tests/: wasm_preview_profile.rs
src-tauri/crates/src/bindings/: ActionId.ts  AssetEntry.ts  CompilationResult.ts  CompilationStatus.ts  DocumentAST.ts  DocumentElement.ts  DocumentEvent.ts  DocumentResources.ts  DocumentSessionStatus.ts  ExportFormat.ts  ExtraFieldSpec.ts  FieldSourceMapEntry.ts  Figure.ts  GlobalSettings.ts  InputGroupSpec.ts  KeyStroke.ts  Package.ts  Paragraph.ts  ParamType.ts  PreviewCaretCue.ts  PreviewElementPosition.ts  PreviewJumpResult.ts  PreviewPageMetrics.ts  ProjectMetadata.ts  ProjectSettings.ts  ReferenceEntry.ts  ResourceKind.ts  ResourcePolicySpec.ts  ResourcePreview.ts  ResourcePreviewStatus.ts  RichText.ts  SectionKind.ts  SourceMapEntry.ts  TemplateOverride.ts  TemplateSpec.ts  VirtualTextFile.ts
src-tauri/defaults/: default_keymap.json  default_settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/schemas/: ergo-template.schema.json
src-tauri/resources/templates/apa7/: template.json
src-tauri/resources/templates/umb-apa/: template.json
src-tauri/resources/templates/versatile-apa/: template.json
src-tauri/src/: action_catalog.rs  action_context.rs  action_keymap.rs  action_types.rs  actions.rs  actions_commands.rs  app_state.rs  architecture_tests.rs  archive.rs  ast.rs  backend_profile.rs  compilation_queue.rs  compilation_types.rs  compile_artifacts.rs  compile_events.rs  compiler.rs  context_glossary.rs  document_outline.rs  document_resources.rs  document_session.rs  document_session_commands.rs  document_session_events.rs  document_session_generation.rs  document_session_types.rs  lib.rs  main.rs  package_download.rs  preview_sync.rs  preview_sync_commands.rs  preview_sync_lookup.rs  preview_sync_types.rs  settings.rs  template_spec.rs  test_fixtures.rs  translation_server.rs  typst_watch.rs  vfs.rs  world.rs
src-tauri/tests/: backend_profile.rs  export_bindings.rs
(+689 files in other folders)
