[package]
name = "ergo"
version = "0.1.0"
description = "Érgo desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ergo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
parking_lot = "0.12.5"
typst-svg = "0.14.2"
zip = "8.6.0"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
