[package]
name = "ergo"
version = "0.1.0"
description = "Érgo desktop app"
authors = ["you"]
edition = "2021"

default-run = "ergo"

[workspace]
resolver = "2"
members = [
    "crates/ergo-core",
    "crates/ergo-engine-wasm",
]

[lib]
name = "ergo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
uuid = { version = "1.23.1", features = ["v4", "js"] }
chrono = "0.4.44"
parking_lot = "0.12.5"
zip = "8.6.0"
ergo-core = { path = "crates/ergo-core" }
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-ide = "0.14.2"

