[package]
name = "ergo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
typst = "0.14.2"
typst-library = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
uuid = { version = "1.23.1", features = ["v4", "js"] }
chrono = "0.4.44"
parking_lot = "0.12.5"
typst-svg = "0.14.2"
typst-ide = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
rayon = "1.12.0"
fontdb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
