[package]
name = "ergo-engine-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ergo-core = { path = "../ergo-core" }
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-render = "0.14.2"
parking_lot = "0.12.5"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "ImageData"
] }
